manifests/applications/argocd/http_route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd-http-route
  namespace: argo
  labels:
    app: argocd
spec:
  parentRefs:
  - name: shared-gateway
    namespace: admin
  # hostnames:
  # - "argocd.noama"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /argocd
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
      - name: argocd-server
        port: 80
